# PortfolioVirtualTwin

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/agents/: graphs.py  llm.py  prompts.py
backend/app/audit/: service.py
backend/app/backtest/: engine.py
backend/app/core/: config.py  crypto.py  db.py  events.py  security.py
backend/app/data/: macro.py  provider.py
backend/app/execution/: brokers.py  service.py
backend/app/monitor/: scheduler.py
backend/app/portfolio/: service.py
backend/app/risk/: gateway.py  readiness.py  scoring.py
backend/app/routers/: agents.py  auth.py  backtests.py  macro.py  portfolios.py  strategies.py  system.py  watchlist.py
backend/app/strategy/: service.py  twin.py
backend/prompts/: Bear.md  Bull.md  Judge.md
backend/tests/: conftest.py  test_pipeline.py  test_prompts.py  test_real_portfolio.py  test_risk_gateway.py  test_rules.py  test_scoring_macro.py  test_simbroker.py  test_user_keys.py  test_watchlist.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/backtests/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/macro/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: app-shell.tsx  equity-chart.tsx  risk-widgets.tsx
frontend/src/lib/: api.ts
(+5 files in other folders)
