[project]
name = "pvt-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "alpaca-py>=0.43.4",
    "bcrypt>=5.0.0",
    "cryptography>=48.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "quantstats>=0.0.81",
    "skfolio>=0.20.1",
    "sqlalchemy>=2.0",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
    "vectorbt>=0.28.2",
    "xlrd>=2.0.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
